Avoid zooming in on selects on iOS (#202)

--- a/frontend/src/ui/select/select.css
+++ b/frontend/src/ui/select/select.css
@@ -34,3 +34,9 @@
 		transform: rotate(45deg);
 	}
 }
+/* To avoid zooming on select focus on Chrome and Safari on iOS */
+@media not all and (min-resolution: 0.001dpcm) {
+	.c-select {
+		font-size: 16px;
+	}
+}
